--- a/config/boards/shields/jango9/Jango9.conf
+++ b/config/boards/shields/jango9/Jango9.conf
@@ -1,4 +1,3 @@
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_ZMK_RGB_UNDERGLOW_WS2812=y
-CONFIG_ZMK_RGB_UNDERGLOW_NUM_PIXELS=9
-CONFIG_ZMK_RGB_UNDERGLOW_DEFAULT_BRIGHTNESS=128
+# Use the STRIP config specific to the LEDs you're using
+CONFIG_WS2812_STRIP=y
