--- a/config/boards/shields/jango9/Jango9.conf
+++ b/config/boards/shields/jango9/Jango9.conf
@@ -3,3 +3,4 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
+CONFIG_ZMK_BATTERY_REPORTING=y
