--- a/config/boards/shields/jango9/Jango9.conf
+++ b/config/boards/shields/jango9/Jango9.conf
@@ -8,3 +8,4 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BLE=y
 CONFIG_BT_DEVICE_NAME="Jango9"
+CONFIG_ZMK_BEHAVIOR_SLEEP=y
