--- a/config/boards/shields/jango9/Jango9.conf
+++ b/config/boards/shields/jango9/Jango9.conf
@@ -1,6 +1,6 @@
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_ZMK_RGB_UNDERGLOW_WS2812=y
-CONFIG_ZMK_RGB_UNDERGLOW_BEHAVIOR=y
+#CONFIG_ZMK_RGB_UNDERGLOW_WS2812=y
+#CONFIG_ZMK_RGB_UNDERGLOW_BEHAVIOR=y
 # Use the STRIP config specific to the LEDs you're using
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
@@ -8,4 +8,4 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BLE=y
 CONFIG_BT_DEVICE_NAME="Jango9"
-CONFIG_ZMK_BEHAVIOR_SLEEP=y
+#CONFIG_ZMK_BEHAVIOR_SLEEP=y
