--- a/config/boards/shields/jango9/Jango9.conf
+++ b/config/boards/shields/jango9/Jango9.conf
@@ -9,3 +9,5 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_BLE=y
 CONFIG_BT_DEVICE_NAME="Jango9"
 #CONFIG_ZMK_BEHAVIOR_SLEEP=y
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_PM_SOFT_OFF=y
