--- a/config/west.yml
+++ b/config/west.yml
@@ -10,5 +10,9 @@ manifest:
     - name: zmk
       remote: zmkfirmware
       import: app/west.yml
+    - name: zmk-anti-idle
+      remote: zmkfirmware
+      revision: main                # or the latest release tag
+      import: app/modules/anti-idle # imports into zmk/app/module/anti-idle
   self:
     path: config
