Remove dtsi from overlay

--- a/config/boards/shields/jango9/Jango9.conf
+++ b/config/boards/shields/jango9/Jango9.conf
@@ -12,3 +12,5 @@ CONFIG_BT_DEVICE_NAME="Jango9"
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_PM_SOFT_OFF=y
 CONFIG_ZMK_POINTING=y
+
+CONFIG_ZMK_ANTI_IDLE_SHARED_ENDPOINT_CONFIGURATION=y
