--- a/build.yaml
+++ b/build.yaml
@@ -21,4 +21,4 @@
 include:
   - board: nice_nano_v2
     shield: Jango9
-    snippet: zmk-usb-logging
+    snippet: zmk-usb-logging, studio-rpc-usb-uart
