--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,4 @@ include:
     shield: Jango9
     snippet: zmk-usb-logging
     snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
