--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,5 @@
 include:
   - board: nice_nano_v2
     shield: Jango9
-    snippet: zmk-usb-logging
-    snippet: studio-rpc-usb-uart
+    snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
